--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img id="logo-brand" src=".vscode/img/Screenshot_2024-06-07_201948-removebg-preview.png" alt="Logo" width="30" height="30" class="d-inline-block align-top">
+          <img id="logo-brand" src="img/Screenshot_2024-06-07_201948-removebg-preview.png" alt="Logo" width="30" height="30" class="d-inline-block align-top">
         </a>
         <span class="navbar-text ms-auto">
           <h3>LASKAR BUAH</h2>
