--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             height="30" class="d-inline-block align-top">
         </a>
         <span class="navbar-text ms-auto">
-          <h3>LASKAR BUAH</h2>
+          <h3>LASKAR BUAH</h3>
         </span>
       </div>
     </nav>
@@ -32,29 +32,25 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
       <!--form-->
-      <form id="contactForm" class="needs-validation mt-4" name='LBI-form' novalidate>
+      <form id="contactForm" class="needs-validation mt-4" name="LBI-form" novalidate>
         <div class="mb-3">
           <label for="name" class="form-label gap-3">Nama Member</label>
-          <input type="text" class="form-control" id="name" name="namamember" placeholder="Masukkan nama Member"
-            required>
+          <input type="text" class="form-control" id="name" name="namamember" placeholder="Masukkan nama Member" required>
           <div class="invalid-feedback">Masukkan Nama Member</div>
         </div>
         <div class="mb-3">
           <label for="oldMemberNo" class="form-label gap-3">NO Member Lama</label>
-          <input type="number" class="form-control" id="oldMemberNo" name="nomemberlama" step="1"
-            placeholder="Masukkan nomor member lama" required>
+          <input type="number" class="form-control" id="oldMemberNo" name="nomemberlama" step="1" placeholder="Masukkan nomor member lama" required>
           <div class="invalid-feedback">Masukkan nomor member lama</div>
         </div>
         <div class="mb-3">
           <label for="newMemberNo" class="form-label gap-3">NO Member Baru</label>
-          <input type="number" class="form-control" id="newMemberNo" name="Noemberbaru" step="1"
-            placeholder="Masukkan nomor member baru" required>
+          <input type="number" class="form-control" id="newMemberNo" name="nomemberbaru" step="1" placeholder="Masukkan nomor member baru" required>
           <div class="invalid-feedback">Masukkan nomor member baru</div>
         </div>
         <div class="mb-3">
           <label for="nik" class="form-label gap-3">NIK KTP</label>
-          <input type="number" class="form-control" id="nik" name="nik" step="1" placeholder="Masukkan NIK KTP"
-            required>
+          <input type="number" class="form-control" id="nik" name="nik" step="1" placeholder="Masukkan NIK KTP" required>
           <div class="invalid-feedback">Masukkan NIK KTP</div>
         </div>
         <div class="mb-3">
@@ -70,91 +66,79 @@
           </select>
         </div>
         <div class="mb-3">
-          <label for="name" class="form-label gap-3">Alamat Lengkap</label>
-          <input type="text" name="alamat" class="form-control" id="name" placeholder="Masukkan Alamat Lengkap"
-            required>
-          <div class="invalid-feedback">Masukkan Nama Member</div>
+          <label for="alamat" class="form-label gap-3">Alamat Lengkap</label>
+          <input type="text" name="alamat" class="form-control" id="alamat" placeholder="Masukkan Alamat Lengkap" required>
+          <div class="invalid-feedback">Masukkan Alamat Lengkap</div>
         </div>
         <div id="responseMessage" class="alert mt-4 d-none" role="alert"></div>
+        <div class="d-grid mt-4">
+          <button type="submit" class="btn btn-primary">Kirim</button>
+        </div>
+      </form>
     </div>
-    <div class="d-grid mt-4">
-      <button type="submit" class="btn btn-primary">Kirim</button>
-    </div>
-    </form>
-    <!--tombol-->
-
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
   <script src="script.js"></script>
   <script>
-    // Database nama kabupaten di Jawa Timur dan Jawa Tengah
     const kabupatenDatabase = {
-    "Jawa Timur": ["Surabaya", "Malang", "Sidoarjo", "Mojokerto", "Jombang", "Probolinggo", "Pasuruan", "Batu",
-    "Lamongan", "Bojonegoro", "Tuban", "Blitar", "Madiun", "Magetan", "Ngawi", "Tulungagung", "Ponorogo", "Trenggalek",
-    "Pacitan", "Bondowoso", "Situbondo", "Banyuwangi"],
-    "Jawa Tengah": ["Semarang", "Surakarta", "Tegal", "Pekalongan", "Salatiga", "Magelang", "Purwokerto", "Brebes",
-    "Purwodadi", "Kudus", "Pati", "Kebumen", "Pemalang", "Demak", "Rembang", "Wonosobo", "Jepara", "Karanganyar",
-    "Blora", "Tegal", "Cilacap"]
+      "Jawa Timur": ["Surabaya", "Malang", "Sidoarjo", "Mojokerto", "Jombang", "Probolinggo", "Pasuruan", "Batu",
+        "Lamongan", "Bojonegoro", "Tuban", "Blitar", "Madiun", "Magetan", "Ngawi", "Tulungagung", "Ponorogo", "Trenggalek",
+        "Pacitan", "Bondowoso", "Situbondo", "Banyuwangi"],
+      "Jawa Tengah": ["Semarang", "Surakarta", "Tegal", "Pekalongan", "Salatiga", "Magelang", "Purwokerto", "Brebes",
+        "Purwodadi", "Kudus", "Pati", "Kebumen", "Pemalang", "Demak", "Rembang", "Wonosobo", "Jepara", "Karanganyar",
+        "Blora", "Tegal", "Cilacap"]
     };
 
-    // Mengurutkan nama kabupaten di setiap provinsi
     for (const provinsi in kabupatenDatabase) {
-    kabupatenDatabase[provinsi].sort();
+      kabupatenDatabase[provinsi].sort();
     }
 
-    console.log(kabupatenDatabase);
-    // Ketika dokumen HTML sepenuhnya dimuat
     document.addEventListener('DOMContentLoaded', function () {
-    const selectProvinsi = document.getElementById('selectProvinsi');
-    const selectKabupaten = document.getElementById('selectKabupaten');
+      const selectProvinsi = document.getElementById('selectProvinsi');
+      const selectKabupaten = document.getElementById('selectKabupaten');
 
-    // Mengisi opsi select provinsi
-    Object.keys(kabupatenDatabase).forEach(provinsi => {
-    const option = document.createElement('option');
-    option.textContent = provinsi;
-    selectProvinsi.appendChild(option);
+      Object.keys(kabupatenDatabase).forEach(provinsi => {
+        const option = document.createElement('option');
+        option.textContent = provinsi;
+        option.value = provinsi;
+        selectProvinsi.appendChild(option);
+      });
+
+      selectProvinsi.addEventListener('change', function () {
+        const selectedProvinsi = this.value;
+        const kabupaten = kabupatenDatabase[selectedProvinsi];
+
+        selectKabupaten.innerHTML = '<option value="">Pilih Kabupaten</option>';
+
+        if (kabupaten && Array.isArray(kabupaten)) {
+          kabupaten.forEach(namaKabupaten => {
+            const option = document.createElement('option');
+            option.textContent = namaKabupaten;
+            option.value = namaKabupaten;
+            selectKabupaten.appendChild(option);
+          });
+        }
+      });
+
+      selectProvinsi.dispatchEvent(new Event('change'));
     });
+  </script>
 
-    // Ketika provinsi dipilih, update opsi kabupaten
-    selectProvinsi.addEventListener('change', function () {
-    const selectedProvinsi = this.value;
-    const kabupaten = kabupatenDatabase[selectedProvinsi];
+  <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwjHLXLuCtyEw1qKy4yW7bkyzj6IvknFTv0_YBJrYl8ennPZI-fI8WiWBVXxFZbDVVUGw/exec';
+    const form = document.forms['LBI-form'];
 
-    // Kosongkan opsi kabupaten sebelum menambahkan yang baru
-    selectKabupaten.innerHTML = '';
-
-    // Loop melalui setiap kabupaten di provinsi tersebut
-    kabupaten.forEach(namaKabupaten => {
-    // Buat opsi untuk kabupaten
-    const option = document.createElement('option');
-    option.textContent = namaKabupaten;
-    selectKabupaten.appendChild(option);
+    form.addEventListener('submit', e => {
+      e.preventDefault();
+      fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+        .then(response => console.log('Success!', response))
+        .catch(error => console.error('Error!', error.message));
     });
-    });
-
-    // Panggil event change untuk menginisialisasi opsi kabupaten berdasarkan provinsi yang dipilih pertama kali
-    selectProvinsi.dispatchEvent(new Event('change'));
-    });
-    </script>
-
-    <script>
-      const scriptURL = '<https://script.google.com/macros/s/AKfycbzx1k9SolpcOZiuxpeoQWPGPoCigAOHz4NPzz0-z1VG/dev>'
-      const form = document.forms['LBI-form']
-
-      form.addEventListener('submit', e => {
-        e.preventDefault()
-        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-          .then(response => console.log('Success!', response))
-          .catch(error => console.error('Error!', error.message))
-      })
-    </script>
-
+  </script>
 </body>
 
 </html>
