--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="mb-3">
           <label for="newMemberNo" class="form-label gap-3">NO Member Baru</label>
-          <input type="number" class="form-control" id="newMemberNo" name="Noemberbaru" step="1"
+          <input type="number" class="form-control" id="newMemberNo" name="nomemberbaru" step="1"
             placeholder="Masukkan nomor member baru" required>
           <div class="invalid-feedback">Masukkan nomor member baru</div>
         </div>
